--- a/TestRenderer/packages.config
+++ b/TestRenderer/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="SkiaSharp" version="2.80.3" targetFramework="net48" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.114.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
