Move ColorMine to separate directory

--- a/VectorTileRenderer2/VectorTileRenderer2.csproj
+++ b/VectorTileRenderer2/VectorTileRenderer2.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ColorMine\ColorMine.csproj" />
     <ProjectReference Include="..\Mapbox.VectorTile\Mapbox.VectorTile.csproj" />
   </ItemGroup>
 
