Fixed Multi-Language capability

--- a/VectorTileRenderer2/VectorTileRenderer2.csproj
+++ b/VectorTileRenderer2/VectorTileRenderer2.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ColorMine\ColorMine.csproj" />
     <ProjectReference Include="..\Mapbox.VectorTile\Mapbox.VectorTile.csproj" />
+    <ProjectReference Include="..\Typography.OpenFont\Typography.OpenFont.csproj" />
   </ItemGroup>
 
 </Project>
